# ChangeLog for gnome-extra/at-spi
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.139 2007/01/19 01:41:01 jer Exp $

  19 Jan 2007; Jeroen Roovers <jer@gentoo.org> at-spi-1.7.12.ebuild:
  Stable for HPPA (bug #147751).

  14 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> at-spi-1.7.12.ebuild:
  Stable on Alpha.

  21 Dec 2006; Markus Rothe <corsair@gentoo.org> at-spi-1.7.12.ebuild:
  Stable on ppc64; bug #156662

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> at-spi-1.7.12.ebuild:
  Stable on sparc

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  at-spi-1.7.12.ebuild:
  Stable on ppc wrt bug #156662.

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> at-spi-1.7.12.ebuild:
  Stable on amd64 wrt bug #156662.

  10 Dec 2006; Andrej Kacian <ticho@gentoo.org> at-spi-1.7.12.ebuild:
  Stable on x86, bug #156662.

  15 Nov 2006; Leonardo Boshell <leonardop@gentoo.org>
  +files/at-spi-1.7.12-tests.patch, at-spi-1.7.12.ebuild:
  Added patch to fix tests (bug #140235).

*at-spi-1.7.12 (01 Nov 2006)

  01 Nov 2006; Leonardo Boshell <leonardop@gentoo.org>
  +at-spi-1.7.12.ebuild:
  New release.

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> at-spi-1.7.10.ebuild:
  Stable on Alpha.

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> at-spi-1.7.10.ebuild:
  Stable on hppa wrt #145428

  19 Sep 2006; Aron Griffis <agriffis@gentoo.org> at-spi-1.7.10.ebuild:
  Mark 1.7.10 stable on ia64. #139612

  12 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> at-spi-1.7.11.ebuild:
  Remove monolithic X deps

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> at-spi-1.6.4.ebuild,
  at-spi-1.6.6-r1.ebuild, at-spi-1.7.7-r1.ebuild, at-spi-1.7.10.ebuild,
  at-spi-1.7.11.ebuild:
  Removing mips keywords as gnome is no longer supported on mips.

  01 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  at-spi-1.7.10.ebuild: