@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/deskbar-applet/Attic/deskbar-applet-2.16.2.ebuild,v 1.9 2007/01/14 01:17:20 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/deskbar-applet/Attic/deskbar-applet-2.16.2.ebuild,v 1.10 2007/01/21 22:16:19 kloeri Exp $
 
 inherit gnome2 eutils autotools python
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://raphael.slinckx.net/deskbar/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 ~ia64 ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86"
 IUSE="eds"
 
 RDEPEND=">=dev-lang/python-2.4
