@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/deskbar-applet
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.41 2007/01/19 00:54:58 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.42 2007/01/21 22:16:19 kloeri Exp $
+
+  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
+  deskbar-applet-2.16.2.ebuild:
+  Stable on IA64, bug 156662.
 
   19 Jan 2007; Jeroen Roovers <jer@gentoo.org>
   deskbar-applet-2.16.2-r1.ebuild:
