@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome2-user-docs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome2-user-docs/Attic/ChangeLog,v 1.78 2007/01/19 00:34:31 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome2-user-docs/Attic/ChangeLog,v 1.79 2007/01/21 22:17:58 kloeri Exp $
+
+  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
+  gnome2-user-docs-2.16.1.ebuild:
+  Stable on IA64, bug 156662.
 
   19 Jan 2007; Jeroen Roovers <jer@gentoo.org>
   gnome2-user-docs-2.16.1.ebuild:
