@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/at-spi
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.139 2007/01/19 01:41:01 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.140 2007/01/21 22:19:02 kloeri Exp $
+
+  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> at-spi-1.7.12.ebuild:
+  Stable on IA64, bug 156662.
 
   19 Jan 2007; Jeroen Roovers <jer@gentoo.org> at-spi-1.7.12.ebuild:
   Stable for HPPA (bug #147751).
